Made CAS auth mechanism compatible with fully detached UIs (i.e., React)